--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,9 @@
             <div class="menuSustain_Card">
               <ul>
                 <li class="mainLi">
-                  <a href="">Our Sustainibility Framework</a>
+                  <a href="sustainability/our-sustainability-framework.html"
+                    >Our Sustainibility Framework</a
+                  >
                 </li>
                 <li class="secondLi"><a href="">Environmental Impact</a></li>
                 <li class="secondLi"><a href="">Responsible Business</a></li>
@@ -293,7 +295,7 @@
             </nav>
           </div>
           <div class="header_bot_menuleft">
-            <div id="header_bot_findAMedicine">
+            <div class="header_bot_findAMedicine">
               <span>Find a medicine<i class="fas fa-angle-down"></i></span>
             </div>
             <input
@@ -390,6 +392,22 @@
             </ul>
           </div>
         </div>
+      </div>
+      <!-------------------------- SOUS MENU DINF A MEDICINE ---------------------------->
+      <div class="menuCache_findAMedicine">
+        <ul>
+          <li>
+            <a href="">Hard to find medicine (Clinigen Direct)</a>
+          </li>
+          <li>
+            <a href="">Managed Access Programs (Cliniport)</a>
+          </li>
+          <li>
+            <a href="">Clinigen Products</a>
+          </li>
+          <li><a href="">Special Obtains</a></li>
+          <li><a href="">Aseptics UK</a></li>
+        </ul>
       </div>
       <!-------------------------- HAMBURGER ---------------------------->
       <div class="headerHamburger">
