--- a/public/sustainability/our-sustainability-framework.html
+++ b/public/sustainability/our-sustainability-framework.html
@@ -100,11 +100,7 @@
           <!-------------------------- SOUS MENU GLOBAL OFFICES ---------------------------->
           <div class="menuCache_globalOffice">
             <ul>
-              <li>
-                <a href="../global-offices/australia-new-zealand.html"
-                  >Australia & New Zealand</a
-                >
-              </li>
+              <li><a href="http://">Australia & New Zealand</a></li>
               <li><a href="http://">Mainland Europe</a></li>
               <li><a href="http://">Japan</a></li>
               <li><a href="http://">Asia</a></li>
@@ -210,9 +206,7 @@
             <div class="menuSustain_Card">
               <ul>
                 <li class="mainLi">
-                  <a href="../sustainability/our-sustainability-framework.html"
-                    >Our Sustainibility Framework</a
-                  >
+                  <a href="">Our Sustainibility Framework</a>
                 </li>
                 <li class="secondLi"><a href="">Environmental Impact</a></li>
                 <li class="secondLi"><a href="">Responsible Business</a></li>
@@ -288,7 +282,7 @@
                   ></a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuProductsServices stayActif"
+                  <a href="javascript:" class="menuProductsServices"
                     >Product & Services<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
@@ -382,11 +376,7 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li>
-                <a href="managed-access-programs.html"
-                  >Managed Access Programs (Cliniport)</a
-                >
-              </li>
+              <li><a href="">Managed Access Programs (Cliniport)</a></li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -451,7 +441,8 @@
         <div class="sousMenuHamburgerCache_menu2">
           <ul>
             <li>
-              <a href="#">About Clinigen</a><i class="fas fa-angle-right"></i>
+              <a href="../about.html">About Clinigen</a
+              ><i class="fas fa-angle-right"></i>
             </li>
             <li>
               <a href="#">Global offices</a><i class="fas fa-angle-right"></i>
@@ -473,187 +464,118 @@
     <main>
       <div class="mainHeaderProducts">
         <div class="mainHeaderProducts_contain">
-          <span>SERVICES</span>
-          <h3 style="width: 1000px">CLINICAL SUPPLIES MANAGEMENT</h3>
-          <input type="button" value="Watch video" class="btnVert" />
+          <span>SUSTAINABILITY</span>
+          <h3 style="width: 900px">OUR SUSTAINABILITY FRAMEWORK</h3>
         </div>
       </div>
       <!------------------------------------------------------------------ CONTENU ------------------------------------------------------------------>
-      <div class="containerProducts">
-        <div class="contain_L">
-          <div class="contain_L_1">
-            <h4>
-              Pharmaceutical and biotech companies know that if they decide to
-              provide access to their medicines prior to commercial launch, they
-              need to plan early.
-            </h4>
-            <p>
-              They need to consider the short- and long-term ethical and
-              strategic implications
-            </p>
-            <p>
-              They need to proceed in a way that ensures the right patients get
-              access, that provides healthcare professionals with the
-              information and support they need to safely treat their patients,
-              and that can be rolled out at a regional, national or global
-              level.
-            </p>
-            <p>
-              They need to do so in a way that maximises value for all their
-              stakeholders – patients, healthcare professionals and themselves.
-            </p>
-            <p>That’s where Clinigen come in.</p>
-            <p>
-              As pioneers in early access and compassionate use, with more than
-              30 years’ experience across 100+ countries, Clinigen work in
-              partnership with pharma companies to design and implement Managed
-              Access Programs that serve their clients and help treat patients.
-            </p>
-            <p>
-              They recognise that every client has different goals, and every
-              patient has different challenges – there is no one-size-fits-all.
-            </p>
-            <p>
-              Clinigen’s flexible approach and industry-leading experience means
-              that their clients get the right solution – and patients get the
-              right medicine.
-            </p>
-            <h3>FIND OUT MORE</h3>
-            <a href="www.clinigencsm.com">www.clinigencsm.com</a>
-          </div>
-          <div class="relatedLinksProducts">
-            <h4>RELATED LINKS</h4>
+      <div class="containerSustain">
+        <div class="containSus_L">
+          <!------------------------------------------ MENU --------------------------------------------->
+          <div class="menuSustain_containt">
             <ul>
-              <li>
-                <a href="managed-access-programs.html"
-                  >Managed Access Programs</a
-                >
+              <li><a href="#">Overview</a></li>
+              <li class="li_actif">
+                <a href="#" class="menuSustain_actif"
+                  >Sustainability Framework</a
+                ><i class="fas fa-angle-down" style="color: #8cdb1f"></i>
               </li>
-              <li><a href="real-world.html">Real World Data</a></li>
+              <div class="menuSustain_sousMenu1">
+                <ul>
+                  <li><a href="#">Environmental Impact</a></li>
+                  <li><a href="#">Responsible Business</a></li>
+                  <li><a href="#">Our People</a></li>
+                  <li><a href="#">Product & Services</a></li>
+                </ul>
+              </div>
+              <li><a href="#">Sustainable Governance</a></li>
+              <li><a href="#">Our stakeholders</a></li>
+              <li><a href="#">UN Sustainable Development Goals</a></li>
+              <li><a href="#">Materiality Assesment</a></li>
+              <li><a href="#">Our Sustainbility Journey</a></li>
+              <li><a href="#">Report, Policies and Data</a></li>
             </ul>
           </div>
         </div>
-        <div class="contain_R">
-          <!--------------------------------------- FORMULAIRE ------------------------------------------------>
-          <div class="formulaire">
-            <div class="formulaire_titre">
-              <span class="formulaire_imgLettre"></span>
-              <h4 class="formulaire_t">Get in touch</h4>
+        <div class="containSus_R">
+          <p>
+            Clinigen’s sustainability framework and approach has been guided by
+            our mission and external standards and initiatives. It has been
+            developed with our stakeholders at the heart of it.
+          </p>
+          <strong>Our framework consists of four pillars, these being:</strong>
+          <img src="../images/clinigen-esg-graphic-may2021.jpg" alt="" />
+          <p>
+            Sustainability is an essential element of our mission and activities
+            and in 2021-22 we will drive our defined sustainability framework
+            through into our business strategy in support of economic,
+            environmental and social progress.
+          </p>
+          <p>
+            Clinigen’s sustainability framework and approach has been guided by
+            the UN Global Compact (UNGC) initiative. The UN announced their 17
+            Sustainable Development Goals in 2015 which serve as the overarching
+            framework for sustainability worldwide and are also fundamental to
+            future economic and business growth.
+          </p>
+          <p>
+            In support of demonstrating our broader commitment to
+            sustainability, in February 2021 we became a signatory to the UN
+            Global Compact (UNGC). By demonstrating our ongoing commitment to
+            the UNGC’s Ten Principles in the areas of human rights, labour,
+            environment and anti-corruption, we will continue to undertake
+            activities and positive action towards meeting the SDGs
+          </p>
+          <!--------------------------------------- TIROIR 1 ------------------------------------------------>
+          <div class="tiroir1">
+            <div class="clickTiroir1">
+              <h4>Our People</h4>
+              <span class="iconeTiroir1"></span>
+              <span class="iconeTiroir2"></span>
             </div>
-            <form action="">
-              <span class="formulaire_libelle">* Mandatory field</span>
-              <input
-                type="text"
-                name="Name Surname"
-                id="inputName"
-                placeholder="Name Surname*"
-                class="formulaire_input"
-              />
-              <input
-                type="text"
-                name="your@email.com"
-                id="inputMail"
-                placeholder="your@email.com*"
-                class="formulaire_input"
-              />
-              <input
-                type="text"
-                name="Organisation"
-                id="inputOrg"
-                placeholder="Organisation*"
-                class="formulaire_input"
-              />
-              <input
-                type="text"
-                name="Contact no."
-                id="inputNumber"
-                placeholder="Contact no.*"
-                class="formulaire_input"
-              />
-              <span class="formulaire_sousTitre"
-                >Reason for enquiry (select one)</span
-              >
-              <!------------------------------------ COMBO 1 ------------------------------------------>
-              <div class="formulaire_input formulaire_combo1">
-                I am a healtcare professional...
-              </div>
-              <div class="formulaire_sousMenu1">
-                <ul>
-                  <li class="formulaire_option1">
-                    I am a healtcare professional...
-                  </li>
-                  <li class="formulaire_option1">Looking for a medicine</li>
-                  <li class="formulaire_option1">
-                    Trying to resolve a medicine shortage (EU and US)
-                  </li>
-                  <li class="formulaire_option1">
-                    Trying to resolve a medicine shortage (Asia, Australia)
-                  </li>
-                  <li class="formulaire_option1">
-                    With a medical information enquiry
-                  </li>
-                  <li class="formulaire_option1">
-                    Who would like to request a MSL visit
-                  </li>
-                </ul>
-              </div>
-              <!------------------------------------ COMBO 2 ------------------------------------------>
-              <div class="formulaire_input formulaire_combo2">
-                I am an industry professional...
-              </div>
-              <div class="formulaire_sousMenu2">
-                <ul>
-                  <li class="formulaire_option2">
-                    I am an industry professional...
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with biological sample management
-                  </li>
-                  <li class="formulaire_option2">
-                    looking for support with clinigcal trial comparator sourcing
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with clinical trial services
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with early access / named patient
-                    medicine supply
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with managing a mature product portfolio
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with unlicensied supply of medicine into
-                    new markets
-                  </li>
-                  <li class="formulaire_option2">
-                    Looking for support with commercial partnerships
-                    (in-licensing/out-licensing)
-                  </li>
-                </ul>
-              </div>
-              <!------------------------------------ COMBO 3 ------------------------------------------>
-              <div class="formulaire_input formulaire_combo3">
-                I have general questions about...
-              </div>
-              <div class="formulaire_sousMenu3">
-                <ul>
-                  <li class="formulaire_option3">
-                    I have general questions about...
-                  </li>
-                  <li class="formulaire_option3">Customer service</li>
-                  <li class="formulaire_option3">Investor relations</li>
-                  <li class="formulaire_option3">Invoicing/finance</li>
-                </ul>
-              </div>
-              <textarea name="Your message" id=""> </textarea>
-              <input
-                type="button"
-                value="Submit query"
-                class="formulaire_btn"
-              />
-            </form>
+            <p>
+              Making sure our people are happy and thriving will help us achieve
+              our ambitions.
+            </p>
           </div>
+          <!--------------------------------------- TIROIR 2 ------------------------------------------------>
+          <div class="tiroir2">
+            <div class="clickTiroir2">
+              <h4>Products and Services</h4>
+              <span class="iconeTiroir1"></span>
+              <span class="iconeTiroir2"></span>
+            </div>
+            <p>
+              Enabling better health by maximising global access to important
+              medicines.
+            </p>
+          </div>
+          <!--------------------------------------- TIROIR 3 ------------------------------------------------>
+          <div class="tiroir3">
+            <div class="clickTiroir3">
+              <h4>Environmental Impact</h4>
+              <span class="iconeTiroir1"></span>
+              <span class="iconeTiroir2"></span>
+            </div>
+            <p>Minimising any negative impact we have on the environment.</p>
+          </div>
+          <!--------------------------------------- TIROIR 4 ------------------------------------------------>
+          <div class="tiroir4">
+            <div class="clickTiroir4">
+              <h4>Responsible Business</h4>
+              <span class="iconeTiroir1"></span>
+              <span class="iconeTiroir2"></span>
+            </div>
+            <p>
+              Conducting business in a responsible way and to the highest
+              ethical standards.
+            </p>
+          </div>
+          <p>
+            We will embed our sustainability framework through effective
+            governance. Further details on our sustainable governance model can
+            be found <a href="">here</a> .
+          </p>
         </div>
       </div>
     </main>
@@ -668,11 +590,7 @@
               >
             </div>
             <ul class="footerContaint_Card_link">
-              <li>
-                <a href="../global-offices/australia-new-zealand.html"
-                  >Australia & New Zealand</a
-                >
-              </li>
+              <li><a href="">Australia & New Zealand</a></li>
               <li><a href="">Mainland Europe</a></li>
               <li><a href="">Japan</a></li>
               <li><a href="">Singapore</a></li>
@@ -739,8 +657,8 @@
     </footer>
     <script src="../src/js/header.js"></script>
     <script src="../src/js/hamburger.js"></script>
-    <script src="../src/js/input.js"></script>
-    <script src="../src/js/form_combo.js"></script>
+    <script src="../src/js/tiroir.js"></script>
+    <script src="../src/js/tiroir_sustain.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
