--- a/public/products-services/real-world.html
+++ b/public/products-services/real-world.html
@@ -100,7 +100,11 @@
           <!-------------------------- SOUS MENU GLOBAL OFFICES ---------------------------->
           <div class="menuCache_globalOffice">
             <ul>
-              <li><a href="../global-offices/australia-new-zealand.html">Australia & New Zealand</a></li>
+              <li>
+                <a href="../global-offices/australia-new-zealand.html"
+                  >Australia & New Zealand</a
+                >
+              </li>
               <li><a href="http://">Mainland Europe</a></li>
               <li><a href="http://">Japan</a></li>
               <li><a href="http://">Asia</a></li>
@@ -206,7 +210,9 @@
             <div class="menuSustain_Card">
               <ul>
                 <li class="mainLi">
-                  <a href="">Our Sustainibility Framework</a>
+                  <a href="../sustainability/our-sustainability-framework.html"
+                    >Our Sustainibility Framework</a
+                  >
                 </li>
                 <li class="secondLi"><a href="">Environmental Impact</a></li>
                 <li class="secondLi"><a href="">Responsible Business</a></li>
